--- a/tribute-project/assets/css/styles.css
+++ b/tribute-project/assets/css/styles.css
@@ -1,58 +1,213 @@
-html {
-    font-size: 10px;
+* {
+	box-sizing:border-box;
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.6rem;
-    line-height: 1.6;
+	background:#101214;
+	color:#BBBBDD;
+	font-size:14px;
+	font-family:tahoma;
+	overflow-y:scroll;
+}
+
+.header {
+    display: table;
+    position: relative;
+    min-height: 500px;
+    width: 100%;
+    height: 100%;
+    background: url("../images/bg-2.png") no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+#title {
+    color: white;
+    text-shadow: 0 0 3px #a7884a, 0 0 5px #745427;
+    font-family: 'tahoma';
+    font-size: 5em;
+    font-weight: bold;
+}
+  
+.text-vertical-center {
+    display: table-cell;
     text-align: center;
-    color: #333333;
-    margin: 0;
+    vertical-align: middle;
 }
 
-h1 {
-    font-size: 4rem;
-    margin-bottom: 0;
-    padding: 0;
+.header img {
+    position: absolute;
+    padding-top: 300px;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
-h2, h4{
-    text-align: center;
-}
-
-#tribute-info p {
-    text-indent: 50px;
+[class*=" bullet-"]:before {
+    display: inline-block;
+    width: 1.2em;
+    opacity: 0.8;
+    content: '';
 }
 
 #tribute-info {
-    text-align: justify;
-    text-justify: inter-word;
+	width:960px;
+	margin:120px auto;
+	position:relative;
 }
 
-#main {
-    margin: 30px 8px;
-    padding: 15px;
-    background:#DCDCDC;
-}
-
-img {
-    max-width: 100%;
-    display: block;
-    height: auto;
-    margin: 0 auto;
+#tribute-info header {
+	position:relative;
+	z-index:20;
 }
 
 #img-div {
-    background: white;
-    padding: 10px;
-    margin: auto;
-    width: fit-content;
+	width:200px;
+	height:200px;
+	border-radius:50%;
+	border:5px solid #745427;
+	overflow:hidden;
+	display:block;
+	margin:0 auto;
+    position: relative;
 }
 
-ul {
-    margin: 0 auto 50px auto;
-    text-align: left;
-    line-height: 1.6;
+#img-div img {
+	height:100%;    		
 }
 
+#tribute-info header h1 {
+	position:absolute;
+	top:20px;
+	right:55px;
+	font-family: 'Tahoma';
+	font-size:3em;
+	font-weight:normal;
+}
+
+#tribute-info > ul {
+	position:relative;
+	width:4px;
+	background:#a7884a;
+	border-right:1px solid #745427;
+	margin:0 auto;
+	padding:6em 0 0;
+	list-style:none;      		
+}
+
+#tribute-info > ul:after {
+	content:"";
+	width:15px;
+	height:15px;
+	border-radius:50%;
+	background:#a7884a;
+	box-shadow:1px 1px 1px #745427;
+	position:absolute;
+	bottom:0;
+	left:-6px;
+}
+#tribute-info > ul > li {
+	position:relative;
+	padding:.3em 0;
+	min-height:230px;
+	cursor:pointer;
+}
+
+#tribute-info > ul > li div {
+	position:absolute;
+}
+
+#tribute-info > ul li > div.event-bullet {
+	padding:0.3em;
+	font-size:1.7em;
+	border-radius:50%;
+	border:3px solid #745427;
+	margin-left:-22px;
+	background:#a7884a
+}
+
+#tribute-info > ul > li div.event_content {
+	width:400px;
+	padding:1em 2em 1.3em;
+	border:1px solid #31271e;
+	border-radius:10px;
+	top:-2.47em;
+	opacity:0.3;
+	background:#111318;
+	opacity:1;
+}
+
+#tribute-info > ul > li:nth-child(odd) div.event_content {
+	right:-470px;
+}
+
+#tribute-info > ul > li:nth-child(even) div.event_content {
+	left:-470px;
+	text-align:right
+}
+
+#tribute-info > ul > li div.event_content:before {
+	content:"";
+	position:absolute;
+	width:20px;
+	height:20px;
+	border-bottom:1px solid #31271e;
+	border-left:1px solid #31271e;
+	top:3em;
+	margin-top:8px;
+	background:#111318;
+}
+        	
+#tribute-info > ul > li:nth-child(odd) div.event_content:before {
+	left:-11px;
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+
+#tribute-info > ul > li:nth-child(even) div.event_content:before {
+	right:-11px;
+	-webkit-transform: rotate(225deg);
+	-moz-transform: rotate(225deg);
+	-ms-transform: rotate(225deg);
+	-o-transform: rotate(225deg);
+	transform: rotate(225deg);
+}
+
+#tribute-info > ul > li div.event_content h2 {
+	margin:0.3em 0;
+	padding:0;
+	text-transform:capitalize;
+	font-size:1.4em;
+}
+
+#tribute-info > ul > li div.event_content p {
+	margin:0;
+	padding:0;
+	line-height:1.5em;
+}
+
+#tribute-info > ul > li div.event_content ul {
+	margin:0;
+	padding:0;
+	list-style:none;
+	line-height:1.5em;
+}
+
+#tribute-info > ul > li div.event_date {
+	top:1em;
+	width:180px;
+	text-align:right;
+	font-size:1.2em;
+	opacity:0.9;
+	font-weight:bold;
+}
+
+#tribute-info > ul > li:nth-child(even) div.event_date {text-align:left;}
+
+div#tribute-info > ul > li:nth-child(odd) div.event_date {right:60px;}
+div#tribute-info > ul > li:nth-child(even) div.event_date {left:60px;}
