--- a/tribute-project/assets/css/styles.css
+++ b/tribute-project/assets/css/styles.css
@@ -1,22 +1,21 @@
-* {
-	box-sizing:border-box;
+html, body {
+    height: 100%;
+    background-color: #101214;
+	font-size: 10px;
 }
 
-body {
-	background:#101214;
-	color:#BBBBDD;
-	font-size:14px;
-	font-family:tahoma;
-	overflow-y:scroll;
+* {
+	box-sizing: border-box;
 }
 
 .header {
     display: table;
     position: relative;
-    min-height: 500px;
     width: 100%;
     height: 100%;
-    background: url("../images/bg-2.png") no-repeat center center scroll;
+	top: 0;
+	left: 0;
+    background: url("../images/freddie.jpg") no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -24,190 +23,181 @@ body {
 }
 
 #title {
-    color: white;
-    text-shadow: 0 0 3px #a7884a, 0 0 5px #745427;
-    font-family: 'tahoma';
-    font-size: 5em;
-    font-weight: bold;
-}
-  
-.text-vertical-center {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 5em;
+  font-weight: bold;
+  padding-top: 20px;
 }
 
-.header img {
-    position: absolute;
-    padding-top: 300px;
-    top: 0;
-    left: 0;
-    width: 100%;
+.text-vert-cent {
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
 }
 
-[class*=" bullet-"]:before {
-    display: inline-block;
-    width: 1.2em;
-    opacity: 0.8;
-    content: '';
+#main {
+	margin: auto;
+  	width: 75%;
+  	border: 3px solid #73AD21;
+  	padding: 10px;
 }
 
-#tribute-info {
-	width:960px;
-	margin:120px auto;
-	position:relative;
+.contain-img {
+	display: flex;
+	justify-content: center;
 }
 
-#tribute-info header {
-	position:relative;
-	z-index:20;
-}
-
-#img-div {
+.img-avatar {
 	width:200px;
 	height:200px;
 	border-radius:50%;
 	border:5px solid #745427;
 	overflow:hidden;
-	display:block;
-	margin:0 auto;
-    position: relative;
 }
 
-#img-div img {
-	height:100%;    		
+.img-avatar img {
+	height: 100%;
 }
 
-#tribute-info header h1 {
-	position:absolute;
-	top:20px;
-	right:55px;
-	font-family: 'Tahoma';
-	font-size:3em;
-	font-weight:normal;
+#img-div p {
+	color: #A1C2E8;
+	font-size: 3em;
+	text-align: center;
 }
 
-#tribute-info > ul {
-	position:relative;
-	width:4px;
-	background:#a7884a;
-	border-right:1px solid #745427;
-	margin:0 auto;
-	padding:6em 0 0;
-	list-style:none;      		
+/* The actual timeline (the vertical ruler) */
+#tribute-info {
+	position: relative;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
-#tribute-info > ul:after {
-	content:"";
-	width:15px;
-	height:15px;
-	border-radius:50%;
-	background:#a7884a;
-	box-shadow:1px 1px 1px #745427;
-	position:absolute;
-	bottom:0;
-	left:-6px;
-}
-#tribute-info > ul > li {
-	position:relative;
-	padding:.3em 0;
-	min-height:230px;
-	cursor:pointer;
+#tribute-info h2 {
+	color: white;
+	font-size: 2em;
 }
 
-#tribute-info > ul > li div {
-	position:absolute;
+#tribute-info p {
+	color: white;
+	font-size: 2em;
 }
 
-#tribute-info > ul li > div.event-bullet {
-	padding:0.3em;
-	font-size:1.7em;
-	border-radius:50%;
-	border:3px solid #745427;
-	margin-left:-22px;
-	background:#a7884a
+/* The actual timeline (the vertical ruler) */
+#tribute-info::after {
+	content: '';
+	position: absolute;
+	width: 6px;
+	background-color: #745427;
+	top: 0;
+	bottom: 0;
+	left: 50%;
+	margin-left: -3px;
 }
 
-#tribute-info > ul > li div.event_content {
-	width:400px;
-	padding:1em 2em 1.3em;
-	border:1px solid #31271e;
-	border-radius:10px;
-	top:-2.47em;
-	opacity:0.3;
-	background:#111318;
-	opacity:1;
+/* Container around content */
+.container {
+	padding: 10px 40px;
+	position: relative;
+	background-color: inherit;
+	width: 50%;
 }
 
-#tribute-info > ul > li:nth-child(odd) div.event_content {
-	right:-470px;
+/* The circles on the timeline */
+.container::after {
+	content: '';
+	position: absolute;
+	width: 25px;
+	height: 25px;
+	right: -17px;
+	background-color: #171a1e;
+	border: 4px solid #FF9F55;
+	top: 15px;
+	border-radius: 50%;
+	z-index: 1;
 }
 
-#tribute-info > ul > li:nth-child(even) div.event_content {
-	left:-470px;
-	text-align:right
+/* Place the container to the left */
+.left {
+	left: 0;
 }
 
-#tribute-info > ul > li div.event_content:before {
-	content:"";
-	position:absolute;
-	width:20px;
-	height:20px;
-	border-bottom:1px solid #31271e;
-	border-left:1px solid #31271e;
-	top:3em;
-	margin-top:8px;
-	background:#111318;
-}
-        	
-#tribute-info > ul > li:nth-child(odd) div.event_content:before {
-	left:-11px;
-	-webkit-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	-o-transform: rotate(45deg);
-	transform: rotate(45deg);
+/* Place the container to the right */
+.right {
+	left: 50%;
 }
 
-#tribute-info > ul > li:nth-child(even) div.event_content:before {
-	right:-11px;
-	-webkit-transform: rotate(225deg);
-	-moz-transform: rotate(225deg);
-	-ms-transform: rotate(225deg);
-	-o-transform: rotate(225deg);
-	transform: rotate(225deg);
+/* Fix the circle for containers on the right side */
+.right::after {
+	left: -16px;
 }
 
-#tribute-info > ul > li div.event_content h2 {
-	margin:0.3em 0;
-	padding:0;
-	text-transform:capitalize;
-	font-size:1.4em;
+/* Add arrows to the left container (pointing right) */
+.left::before {
+	content: " ";
+	height: 0;
+	position: absolute;
+	top: 22px;
+	width: 0;
+	z-index: 1;
+	right: 30px;
+	border: medium solid white;
+	border-width: 10px 0 10px 10px;
+	border-color: transparent transparent transparent #171a1e;
 }
 
-#tribute-info > ul > li div.event_content p {
-	margin:0;
-	padding:0;
-	line-height:1.5em;
+/* Add arrows to the right container (pointing left) */
+.right::before {
+	content: " ";
+	height: 0;
+	position: absolute;
+	top: 22px;
+	width: 0;
+	z-index: 1;
+	left: 30px;
+	border: medium solid white;
+	border-width: 10px 10px 10px 0;
+	border-color: transparent #171a1e transparent transparent;
 }
 
-#tribute-info > ul > li div.event_content ul {
-	margin:0;
-	padding:0;
-	list-style:none;
-	line-height:1.5em;
+/* The actual content */
+.content {
+	padding: 20px 30px;
+	background-color: #171a1e;
+	position: relative;
+	border-radius: 6px;
 }
 
-#tribute-info > ul > li div.event_date {
-	top:1em;
-	width:180px;
-	text-align:right;
-	font-size:1.2em;
-	opacity:0.9;
-	font-weight:bold;
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+	/* Place the timelime to the left */
+		#tribute-info::after {
+		left: 31px;
+	}
+	
+	/* Full-width containers */
+	.container {
+		width: 100%;
+		padding-left: 70px;
+		padding-right: 25px;
+	}
+	
+	/* Make sure that all arrows are pointing leftwards */
+	.container::before {
+		left: 60px;
+		border: medium solid white;
+		border-width: 10px 10px 10px 0;
+		border-color: transparent white transparent transparent;
+	}
+  
+	/* Make sure all circles are at the same spot */
+	.left::after, .right::after {
+		left: 15px;
+	}
+	
+	/* Make all right containers behave like the left ones */
+	.right {
+		left: 0%;
+	}
 }
-
-#tribute-info > ul > li:nth-child(even) div.event_date {text-align:left;}
-
-div#tribute-info > ul > li:nth-child(odd) div.event_date {right:60px;}
-div#tribute-info > ul > li:nth-child(even) div.event_date {left:60px;}
+  
