--- a/tribute-project/assets/css/styles.css
+++ b/tribute-project/assets/css/styles.css
@@ -24,6 +24,7 @@ html, body {
 
 #title {
   color: white;
+  text-shadow: 2px 2px #745427;
   font-family: 'Montserrat', sans-serif;
   font-size: 5em;
   font-weight: bold;
@@ -39,7 +40,6 @@ html, body {
 #main {
 	margin: auto;
   	width: 100%;
-  	border: 3px solid #73AD21;
   	padding: 10px;
 }
 
@@ -73,14 +73,54 @@ html, body {
 	margin: 0 auto;
 }
 
+#bg-1{
+	position: absolute;
+	opacity: 0.2;
+	height: 25%;
+	width: 100%;
+	left: -125px;
+	display: table;
+    background: url("../images/freddie-bg.png") no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+#bg-2{
+	position: absolute;
+	opacity: 0.2;
+	height: 25%;
+	width: 100%;
+	left: -125px;
+	display: table;
+    background: url("../images/mercury-bg.png") no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 #tribute-info h2 {
 	color: white;
 	font-size: 2em;
 }
 
-#tribute-info p {
+#tribute-info p{
 	color: white;
 	font-size: 2em;
+	text-align: justify;
+	text-justify:inter-word;
+}
+
+#tribute-info ul li {
+	color: white;
+	font-size: 2em;
+}
+
+#tribute-info p.i {
+	font-size: 1.75em;
+	font-style: italic;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -168,9 +208,33 @@ html, body {
 	border-radius: 6px;
 }
 
+#link-contain {
+	display: flex;
+	justify-content: center;
+}
+
+a:link, a:visited {
+	background-color: #16191d;
+	color: white;
+	border: 3px solid #745427;
+	font-size: 3em;
+	padding: 14px 25px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
 	/* Place the timelime to the left */
+	#bg-1 {
+		background: none;
+	}
+
+	#bg-2 {
+		background: none;
+	}
+
 	#tribute-info::after {
 		left: 31px;
 	}
@@ -200,4 +264,13 @@ html, body {
 		left: 0%;
 	}
 }
-  
+
+.footer {
+   	position: relative;
+   	left: 0;
+   	bottom: 0;
+   	width: 100%;
+   	color: white;
+	font-size: 1em;
+   	text-align: center;
+}
