--- a/tribute-project/assets/css/styles.css
+++ b/tribute-project/assets/css/styles.css
@@ -25,10 +25,10 @@ html, body {
 #title {
   color: white;
   text-shadow: 2px 2px #745427;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 5em;
   font-weight: bold;
-  padding-top: 20px;
+  padding-top: 150px;
 }
 
 .text-vert-cent {
