--- a/chess/assets/css/styles.css
+++ b/chess/assets/css/styles.css
@@ -4,6 +4,11 @@
 
 body {
     text-align: center;
+    background-color: #0a0a0c;
+}
+
+h1 {
+    color: #c2a657;
 }
 
 #board {
@@ -15,7 +20,7 @@ body {
     margin: auto;
     display: flex;
 	flex-wrap: wrap;
-	border: 1vw solid #b1964c;
+	border: 1vw solid #CCCCCC;
     max-width: 600px;
     max-height: 600px;
     width: 100vw;
@@ -27,10 +32,21 @@ body {
     height: 12.5%;
     width: 12.5%;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .black-sq {
     height: 12.5%;
     width: 12.5%;
-    background-color: #111318;
+    background-color: #808080;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    height: 85%;
+    width: 85%;
 }
