--- a/projects/tic-tac-toe/assets/css/styles.css
+++ b/projects/tic-tac-toe/assets/css/styles.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #ttt-board {
   height: 400px;
   width: 400px;
