--- a/projects/tic-tac-toe/assets/css/styles.css
+++ b/projects/tic-tac-toe/assets/css/styles.css
@@ -11,7 +11,48 @@ body {
 }
 
 #ttt-board {
-  height: 400px;
-  width: 400px;
-  border: 1px solid black;
+  display: grid;
+  grid-template-columns: 150px 150px 150px;
+  grid-template-rows: 150px 150px 150px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "a0 a1 a2"
+    "b0 b1 b2"
+    "c0 c1 c2";
+}
+
+.a0 {
+  grid-area: a0;
+}
+
+.a1 {
+  grid-area: a1;
+}
+
+.a2 {
+  grid-area: a2;
+}
+
+.b0 {
+  grid-area: b0;
+}
+
+.b1 {
+  grid-area: b1;
+}
+
+.b2 {
+  grid-area: b2;
+}
+
+.c0 {
+  grid-area: c0;
+}
+
+.c1 {
+  grid-area: c1;
+}
+
+.c2 {
+  grid-area: c2;
 }
