--- a/projects/tic-tac-toe/assets/css/styles.css
+++ b/projects/tic-tac-toe/assets/css/styles.css
@@ -26,13 +26,19 @@ body {
 #player1,
 #player2 {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100px;
   height: 100px;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
   margin: 10px;
-  font-size: 4rem;
+  font-size: 1.5rem;
+}
+
+#players h1,
+#players h2 {
+  margin: 0;
 }
 
 .current-player.blue,
