Changed the way winners are announced
Added containers that will hold players and game over shells
shells will show(game over) and hide(players) when gameover

--- a/projects/tic-tac-toe/assets/css/styles.css
+++ b/projects/tic-tac-toe/assets/css/styles.css
@@ -17,12 +17,6 @@ body {
   flex-direction: column;
 }
 
-#players {
-  display: flex;
-  justify-content: space-around;
-  margin: 10px;
-}
-
 #player1,
 #player2 {
   display: flex;
@@ -70,55 +64,6 @@ body {
     "a0 a1 a2"
     "b0 b1 b2"
     "c0 c1 c2";
-}
-
-svg {
-  height: 450px;
-  width: 450px;
-  position: absolute;
-  stroke-width: 15;
-  stroke: brown;
-  visibility: hidden;
-}
-
-svg.blue {
-  stroke: blue;
-}
-
-svg.red {
-  stroke: red;
-}
-
-.horizontal.top {
-  top: 19.5rem;
-}
-
-.horizontal.mid {
-  top: 28.8rem;
-}
-
-.horizontal.bot {
-  top: 38.2rem;
-}
-
-.vertical {
-  top: 15rem;
-}
-
-.vertical.left {
-  left: 37.8rem;
-}
-
-.vertical.mid {
-  left: 47.17rem;
-}
-
-.vertical.right {
-  left: 56.6rem;
-}
-
-.diagonal {
-  top: 15rem;
 }
 
 .a0 {
@@ -172,10 +117,37 @@ svg.red {
   width: 100%;
 }
 
+div.history-buttons {
+  display: flex;
+  justify-content: center;
+}
+
 div.history-buttons span {
   cursor: pointer;
 }
 
-div.history-buttons {
-  visibility: hidden;
+#players-shell {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 10px;
+}
+
+.containers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+div#game-over {
+  display: none;
+}
+
+#players {
+  display: block;
+  width: 100%;
+}
+
+#the-winner {
+  font-size: 3rem;
 }
