--- a/projects/tic-tac-toe/assets/css/styles.css
+++ b/projects/tic-tac-toe/assets/css/styles.css
@@ -40,6 +40,7 @@ body {
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
   margin: 10px;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 #players h1,
@@ -47,7 +48,11 @@ body {
   margin: 0;
 }
 
-#vs2p {
+#vs-ai {
+  display: block;
+}
+
+#vs-2p {
   display: none;
 }
 
