--- a/projects/tic-tac-toe/assets/css/styles.css
+++ b/projects/tic-tac-toe/assets/css/styles.css
@@ -52,6 +52,78 @@ body {
   cursor: pointer;
 }
 
+#curtain-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
+#top-title,
+#bot-title {
+  margin: 0;
+}
+
+#top-title {
+  position: absolute;
+  bottom: -55px;
+}
+
+#bot-title {
+  position: absolute;
+  top: -65px;
+}
+
+#curtain {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  z-index: 1;
+  color: white;
+  font-size: 5rem;
+}
+
+#top-curtain,
+#bot-curtain {
+  position: absolute;
+  background-color: black;
+  width: 100%;
+  height: 50%;
+  left: 0;
+}
+
+#top-curtain {
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  overflow: hidden;
+}
+
+#bot-curtain {
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  overflow: hidden;
+}
+
+.open-top#top-curtain {
+  transition: 1s;
+  top: -50%;
+}
+
+.open-bot#bot-curtain {
+  transition: 1s;
+  bottom: -50%;
+}
+
 #players h1,
 #players h2 {
   margin: 0;
@@ -224,5 +296,19 @@ div#game-over {
   .tile {
     width: 100px;
     height: 100px;
+  }
+
+  #curtain {
+    font-size: 2.5rem;
+  }
+
+  #top-title {
+    position: absolute;
+    bottom: -26px;
+  }
+
+  #bot-title {
+    position: absolute;
+    top: -32px;
   }
 }
