--- a/projects/tic-tac-toe/assets/css/styles.css
+++ b/projects/tic-tac-toe/assets/css/styles.css
@@ -21,64 +21,6 @@ body {
   align-items: center;
 }
 
-#main {
-  display: flex;
-  flex-direction: column;
-}
-
-#versus {
-  width: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-#versus img {
-  width: 100%;
-}
-
-#player1,
-#player2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  height: 100px;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-  margin: 10px;
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-
-#curtain-title {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-}
-
-#top-title,
-#bot-title {
-  margin: 0;
-}
-
-#top-title {
-  position: absolute;
-  bottom: -55px;
-}
-
-#bot-title {
-  position: absolute;
-  top: -65px;
-}
-
 #curtain {
   position: absolute;
   height: 100%;
@@ -114,6 +56,21 @@ body {
   overflow: hidden;
 }
 
+#top-title,
+#bot-title {
+  margin: 0;
+}
+
+#top-title {
+  position: absolute;
+  bottom: -55px;
+}
+
+#bot-title {
+  position: absolute;
+  top: -65px;
+}
+
 .open-top#top-curtain {
   transition: 1s;
   top: -50%;
@@ -124,55 +81,9 @@ body {
   bottom: -50%;
 }
 
-#players h1,
-#players h2 {
-  margin: 0;
-}
-
-#vs-ai {
-  display: block;
-}
-
-#vs-2p {
-  display: none;
-}
-
-.current-player {
-  transform: scale(1);
-  animation: pulse-beat 2s infinite;
-}
-
-@keyframes pulse-beat {
-  0% {
-    transform: scale(1.2);
-  }
-
-  70% {
-    transform: scale(1);
-  }
-
-  100% {
-    transform: scale(1.2);
-  }
-}
-
-.winning-trio span {
-  transform: scale(1);
-  animation: pulse-move 2s infinite;
-}
-
-@keyframes pulse-move {
-  0% {
-    transform: scale(1.2);
-  }
-
-  70% {
-    transform: scale(1);
-  }
-
-  100% {
-    transform: scale(1.2);
-  }
+#main {
+  display: flex;
+  flex-direction: column;
 }
 
 #ttt-board {
@@ -252,13 +163,15 @@ body {
   width: 100%;
 }
 
-div.history-buttons {
+.containers {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-div.history-buttons span {
-  cursor: pointer;
+#players {
+  display: block;
+  width: 100%;
 }
 
 #players-shell {
@@ -268,23 +181,97 @@ div.history-buttons span {
   margin: 10px;
 }
 
-.containers {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.current-player {
+  transform: scale(1);
+  animation: pulse-beat 2s infinite;
 }
 
-div#game-over {
+@keyframes pulse-beat {
+  0% {
+    transform: scale(1.2);
+  }
+
+  70% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.2);
+  }
+}
+
+#player1,
+#player2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+#players h1,
+#players h2 {
+  margin: 0;
+}
+
+#versus {
+  width: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+#versus img {
+  width: 100%;
+}
+
+#vs-ai {
+  display: block;
+}
+
+#vs-2p {
   display: none;
 }
 
-#players {
-  display: block;
-  width: 100%;
+#game-over {
+  display: none;
 }
 
 #the-winner {
   font-size: 3rem;
+}
+
+.history-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.history-buttons span {
+  cursor: pointer;
+}
+
+.winning-trio span {
+  transform: scale(1);
+  animation: pulse-move 2s infinite;
+}
+
+@keyframes pulse-move {
+  0% {
+    transform: scale(1.2);
+  }
+
+  70% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.2);
+  }
 }
 
 @media screen and (max-width: 425px) {
