Fixed Media Query for 400px below

--- a/projects/tic-tac-toe/assets/css/styles.css
+++ b/projects/tic-tac-toe/assets/css/styles.css
@@ -334,6 +334,7 @@ body {
   .tile {
     width: 100px;
     height: 100px;
+    font-size: 7rem;
   }
 
   #curtain {
@@ -348,5 +349,9 @@ body {
   #bot-title {
     position: absolute;
     top: -32px;
+  }
+
+  .button {
+    font-size: 1.4rem;
   }
 }
